races bug flexbox

--- a/index.css
+++ b/index.css
@@ -15,7 +15,7 @@
 #BODY {
     display: flex;
     flex-direction : row;
-    justify-content : space-evenly;
+    justify-content : center;
 }
 
 #CenterDiv {
