changed to px my center div

--- a/index.css
+++ b/index.css
@@ -19,8 +19,8 @@
 }
 
 #CenterDiv {
-    padding-left : 20%;
-    padding-right : 20%;
+    padding-left : 50px;
+    padding-right : 50px;
     padding-top : 30px;
     padding-bottom : 30px;
     background-color : white;
