--- a/index.css
+++ b/index.css
@@ -57,3 +57,12 @@ p {
 li {
     font-family: "Inconsolata", monospace;
 }
+
+
+@media screen and (min-width: 500px) {
+    #BODY {
+    display: flex;
+    flex-direction : column;
+    justify-content : center;
+}
+}
