--- a/index.css
+++ b/index.css
@@ -60,7 +60,7 @@ li {
 }
 
 
-@media screen and (min-width: 500px) {
+@media (max-width: 400px) {
     #BODY {
     display: flex;
     flex-direction : column;
