--- a/index.css
+++ b/index.css
@@ -61,9 +61,12 @@ li {
 
 
 @media (max-width: 400px) {
-    #BODY {
-    display: flex;
-    flex-direction : column;
-    justify-content : center;
+    #CenterDiv {
+    padding-left : 5px;
+    padding-right : 5px;
+    padding-top : 30px;
+    padding-bottom : 30px;
+    background-color : white;
+    color : #0d2b2b;
 }
 }
